opam-version: "2.0"
maintainer: "Francois BERENGER <ligand@free.fr>"
authors: "Francois Berenger"
license: "LGPL"
homepage: "https://github.com/UnixJunkie/parany"
bug-reports: "https://github.com/UnixJunkie/parany/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "base-unix"
  "ocamlnet"
]
build: [
    [ "dune" "build" "-p" name ]
    [ "dune" "runtest" "-p" name ] {with-test}
]
dev-repo: "git+https://github.com/UnixJunkie/parany.git"
synopsis: "Parallelize any computation"
