opam-version: "2.0"
maintainer: "unixjunkie@sdf.org"
authors: "Francois Berenger"
license: "LGPL-2.0-or-later"
homepage: "https://github.com/UnixJunkie/parany"
bug-reports: "https://github.com/UnixJunkie/parany/issues"
dev-repo: "git+https://github.com/UnixJunkie/parany.git"
depends: [
  "domainslib"
  "dune" {>= "1.6.0"}
  "ocaml" {>= "4.03.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "src/test.exe"] {with-test}
  ["./test.sh"] {with-test}
]
synopsis: "Parallelize any computation"
description: """
Generalized map reduce for parallel computers (not distributed computing).
Can process in parallel an infinite stream of elements.

Can process a very large file in parallel on a multicore computer;
provided there is a way to cut your file into independent blocks
(the 'demux' function).
The processing function is called 'work'.
The function gathering the results is called 'mux'.
The number of processors running your computation in parallel is called
'nprocs'.
The chunk size (number of items) processed by one call to the 'work' function
is called 'csize'.
"""
#url {
#  src: "https://github.com/UnixJunkie/parany/archive/vXXX.tar.gz"
#  checksum: "md5=YYY"
#}
