
(library
  (name parany)
  (public_name parany)
  (modules parany send)
  (libraries unix threads netmulticore netsys cpu sendmsg bytearray))

(executables
  (names test)
  (modules test)
  (libraries parany unix bytearray))

; (executables
;   (names test send)
;   (modules test send)
;   (libraries parany unix bytearray))

(alias
  (name runtest)
  (action
  (run ./test.exe 16 800)))
