
(library
  (name parany)
  (public_name parany)
  (modules parany)
  (libraries unix cpu))

(executables
  (names test)
  (modules test)
  (libraries parany unix))

;; the real way to regression test this library is to run
;; ./test.sh, which uses test.exe declared just above
;(alias
;  (name runtest)
;  (action
;  (run ./test.exe 16 800 0)))
